# tauri-miaoyan

./: README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
public/: ppt.html
src/: App.tsx  api.ts  i18n.ts  main.tsx  templates.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  fullscreen.rs  lib.rs  main.rs  notes.rs  watcher.rs
src/components/: AiFloatingMenu.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Editor.tsx  EditorContextMenu.tsx  NoteList.tsx  PPTView.tsx  Preview.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TemplatePanel.tsx  Toast.tsx  WindowControls.tsx
src/extensions/: markdownAutoFormat.ts
src/styles/: index.css
src/theme/: editorTheme.ts
src/utils/: settings.ts
